--- a/contact.html
+++ b/contact.html
@@ -12,18 +12,20 @@
 
 <body>
     <header>
-        <h1>Jake David</h1>
-        <ul class="nav justify-content-end">
-            <li class="nav-item">
-                <a class="nav-link" href="index.html">About</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="protfolio.html">Portfolio</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="contact.html">Contact</a>
-            </li>
-        </ul>
+        <div class="nav navBar" id="nav-bar">
+            <h1>Jake David</h1>
+            <ul class="nav">
+                <li class="nav-item">
+                    <a class="nav-link" href="index.html">About</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="protfolio.html">Portfolio</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="contact.html">Contact</a>
+                </li>
+            </ul>
+        </div>
     </header>
 
     <div class="container">
@@ -33,9 +35,9 @@
             <h2>Contact</h2>
             <hr>
             <div class="form-group">
-                    <label for="exampleFormControlInput1">Name</label>
-                    <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="Your Name">
-                </div>
+                <label for="exampleFormControlInput1">Name</label>
+                <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="Your Name">
+            </div>
             <div class="form-group">
                 <label for="exampleFormControlInput1">Email address</label>
                 <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
@@ -51,11 +53,11 @@
         </section>
 
     </div>
+    <footer>
 
+    </footer>
 </body>
 
-<footer>
 
-</footer>
 
 </html>
