--- a/portfolio.html
+++ b/portfolio.html
@@ -29,19 +29,81 @@
     </header>
 
     <div class="container">
+        <div class="row">
+            <div class="col">
+                <section id="portfolio-wrapper">
+                    <a href="#1">
+                        <div class="porfolio-entry">
+                            <img src="http://lorempixel.com/250/170/fashion" class="portfolio-image">
+                            <div class="portfolio-title">
+                                Hangman
+                            </div>
+                        </div>
+                    </a>
+                </section>
+            </div>
+            <div class="col">
 
-        <section id="portfolio-body">
+                <section id="portfolio-wrapper">
+                    <a href="#1">
+                        <div class="porfolio-entry">
+                            <img src="http://lorempixel.com/250/170/fashion" class="portfolio-image">
+                            <div class="portfolio-title">
+                                Hangman
+                            </div>
+                        </div>
+                    </a>
+                </section>
+            </div>
+        </div>
 
+        <div class="row">
+            <div class="col">
+                <section id="portfolio-wrapper">
+                    <a href="#1">
+                        <div class="porfolio-entry">
+                            <img src="http://lorempixel.com/250/170/fashion" class="portfolio-image">
+                            <div class="portfolio-title">
+                                Hangman
+                            </div>
+                        </div>
+                    </a>
+                </section>
+            </div>
+            <div class="col">
 
+                <section id="portfolio-wrapper">
+                    <a href="#1">
+                        <div class="porfolio-entry">
+                            <img src="http://lorempixel.com/250/170/fashion" class="portfolio-image">
+                            <div class="portfolio-title">
+                                Hangman
+                            </div>
+                        </div>
+                    </a>
+                </section>
+            </div>
+        </div>
 
-        </section>
+        <div class="row">
+            <div class="col">
+                <section id="portfolio-wrapper">
+                    <a href="#1">
+                        <div class="porfolio-entry">
+                            <img src="http://lorempixel.com/250/170/fashion" class="portfolio-image">
+                            <div class="portfolio-title">
+                                Hangman
+                            </div>
+                        </div>
+                    </a>
+                </section>
+            </div>
+        </div>
 
     </div>
     <footer>
 
     </footer>
 </body>
-
-
 
 </html>
