--- a/index.html
+++ b/index.html
@@ -42,15 +42,17 @@
                 Hello, I'm Jake. I'm a natural philosopher, adventure seeker, music afficianado, ametuear theoretical
                 physicist, tinkerer and most importantly: Just a nice guy. xD
                 I enjoy dodging jellyfish while snorkeling, bungy jumping, drum circles, music festivals and progressive
-                metal. Here are some jokes:
+                metal. Here are some jokes:<br>
                 I'm so metal I rust. I'm so metal I oxidize while you reduce.
             </p>
             <p class="lead">
                 I'm secretly a weeb, and I play LoL. Silver 4 champion right here! I also enjoy travelling a good
                 bit
-                and have been all over the world. Still need to see Pyramids and Penguins though, still working on
+                and have been all over the world. Still need to see Pyramids and Penguins though, but I'm working on
                 that.
-                I'm a big fan of snow, mountains, and the ocasional conspiracy thory as well.
+                I'm a big fan of snow, mountains, and the ocasional conspiracy thory as well. I have been in the tech
+                indistry for 2 years and studied code in college. Im hoping to move into the development work after the
+                completion of this program.
             </p>
         </section>
 
