--- a/contact.html
+++ b/contact.html
@@ -46,7 +46,7 @@
                 <label for="exampleFormControlTextarea1">Message</label>
                 <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
             </div>
-            <button></button>
+            <button id="submit-contact-btn">Submit</button>
 
 
 
