--- a/portfolio.html
+++ b/portfolio.html
@@ -29,6 +29,7 @@
     </header>
 
     <div class="container">
+        <br><br><br>
         <div class="row">
             <div class="col">
                 <section id="portfolio-wrapper">
@@ -49,14 +50,14 @@
                         <div class="porfolio-entry">
                             <img src="http://lorempixel.com/250/170/fashion" class="portfolio-image">
                             <div class="portfolio-title">
-                                Hangman
+                                RPG Game
                             </div>
                         </div>
                     </a>
                 </section>
             </div>
         </div>
-
+        <br><br><br>
         <div class="row">
             <div class="col">
                 <section id="portfolio-wrapper">
@@ -64,7 +65,7 @@
                         <div class="porfolio-entry">
                             <img src="http://lorempixel.com/250/170/fashion" class="portfolio-image">
                             <div class="portfolio-title">
-                                Hangman
+                                Rutgers Info Widget
                             </div>
                         </div>
                     </a>
@@ -77,14 +78,14 @@
                         <div class="porfolio-entry">
                             <img src="http://lorempixel.com/250/170/fashion" class="portfolio-image">
                             <div class="portfolio-title">
-                                Hangman
+                                Trivia Game
                             </div>
                         </div>
                     </a>
                 </section>
             </div>
         </div>
-
+        <br><br><br>
         <div class="row">
             <div class="col">
                 <section id="portfolio-wrapper">
@@ -92,14 +93,14 @@
                         <div class="porfolio-entry">
                             <img src="http://lorempixel.com/250/170/fashion" class="portfolio-image">
                             <div class="portfolio-title">
-                                Hangman
+                                Rock Paper Scissors
                             </div>
                         </div>
                     </a>
                 </section>
             </div>
         </div>
-
+        <br><br><br>
     </div>
     <footer>
 
