--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
 
         <section id="main-bio">
 
-            <h2>Jake David</h2>
+            <h2>About Me</h2>
+            <hr>
 
             <img id="bio-image" src="assets/images/bio-pic.jpg" alt="Bio Picture">
 
@@ -57,6 +58,10 @@
         </section>
 
     </div>
+
+    <footer>
+
+    </footer>
 
 </body>
 
