--- a/portfolio.html
+++ b/portfolio.html
@@ -12,7 +12,7 @@
 
 <body>
     <header>
-        <div class="nav navBar" id="nav-bar">
+        <div class="nav navBar" class="nav-bar">
             <h1>Jake David</h1>
             <ul class="nav">
                 <li class="nav-item">
@@ -29,10 +29,10 @@
     </header>
 
     <div class="container">
-        <br><br><br>
+        <br><br>
         <div class="row">
             <div class="col">
-                <section id="portfolio-wrapper">
+                <section class="portfolio-wrapper">
                     <a href="#1">
                         <div class="porfolio-entry">
                             <img src="http://lorempixel.com/250/170/fashion" class="portfolio-image">
@@ -45,7 +45,7 @@
             </div>
             <div class="col">
 
-                <section id="portfolio-wrapper">
+                <section class="portfolio-wrapper">
                     <a href="#1">
                         <div class="porfolio-entry">
                             <img src="http://lorempixel.com/250/170/fashion" class="portfolio-image">
@@ -60,12 +60,12 @@
         <br><br><br>
         <div class="row">
             <div class="col">
-                <section id="portfolio-wrapper">
+                <section class="portfolio-wrapper">
                     <a href="#1">
                         <div class="porfolio-entry">
                             <img src="http://lorempixel.com/250/170/fashion" class="portfolio-image">
                             <div class="portfolio-title">
-                                Rutgers Info Widget
+                                Rutgers Info Wclassget
                             </div>
                         </div>
                     </a>
@@ -73,7 +73,7 @@
             </div>
             <div class="col">
 
-                <section id="portfolio-wrapper">
+                <section class="portfolio-wrapper">
                     <a href="#1">
                         <div class="porfolio-entry">
                             <img src="http://lorempixel.com/250/170/fashion" class="portfolio-image">
@@ -88,7 +88,7 @@
         <br><br><br>
         <div class="row">
             <div class="col">
-                <section id="portfolio-wrapper">
+                <section class="portfolio-wrapper">
                     <a href="#1">
                         <div class="porfolio-entry">
                             <img src="http://lorempixel.com/250/170/fashion" class="portfolio-image">
