WIP homework 1.8 sticky footer, background image added, typos corrected and header for portfolio body

--- a/contact.html
+++ b/contact.html
@@ -53,11 +53,9 @@
         </section>
 
     </div>
-    <footer>
 
-    </footer>
+    <footer class="footer">Copyright &copy; </footer>
+
 </body>
-
-
 
 </html>
