--- a/index.html
+++ b/index.html
@@ -40,28 +40,25 @@
             <img id="bio-image" src="assets/images/bio-pic.jpg" alt="Bio Picture">
 
             <p class="lead">
-                Hello, I'm Jake. I'm a natural philosopher, adventure seeker, music afficianado, ametuear theoretical
-                physicist, tinkerer and most importantly: Just a nice guy. xD
+                Hello, I'm Jake. I'm a natural philosopher, adventure seeker, music afficianado, ameteaur theoretical
+                physicist, tinkerer and most importantly a nice guy. xD
                 I enjoy dodging jellyfish while snorkeling, bungy jumping, drum circles, music festivals and progressive
-                metal. Here are some jokes:<br>
-                I'm so metal I rust. I'm so metal I oxidize while you reduce.
+                metal. Here's a joke:<br>
+                I'm so metal I oxidize while you reduce.
             </p>
             <p class="lead">
                 I'm secretly a weeb, and I play LoL. Silver 4 champion right here! I also enjoy travelling a good
-                bit
-                and have been all over the world. Still need to see Pyramids and Penguins though, but I'm working on
+                bit. I've been all over the world, set foot on five of seven continents. Still need to see pyramids and penguins though, but I'm working on
                 that.
-                I'm a big fan of snow, mountains, and the ocasional conspiracy thory as well. I have been in the tech
-                indistry for 2 years and studied code in college. Im hoping to move into the development work after the
+                I'm a big fan of snow, mountains, and the ocasional conspiracy theory as well. I have been in the tech
+                industry for 2 years and studied code in college. I'm hoping to move into a development position after the
                 completion of this program.
             </p>
         </section>
 
     </div>
 
-    <footer>
-
-    </footer>
+    <footer class="footer">Copyright &copy; </footer>
 
 </body>
 
