--- a/portfolio.html
+++ b/portfolio.html
@@ -29,7 +29,8 @@
     </header>
 
     <div class="container">
-        <br><br>
+        <h2>Portfolio</h2>
+        <hr>
         <div class="row">
             <div class="col">
                 <section class="portfolio-wrapper">
@@ -48,7 +49,7 @@
                 <section class="portfolio-wrapper">
                     <a href="#1">
                         <div class="porfolio-entry">
-                            <img src="http://lorempixel.com/250/170/fashion" class="portfolio-image">
+                            <img src="http://lorempixel.com/output/technics-q-c-250-170-6.jpg" class="portfolio-image">
                             <div class="portfolio-title">
                                 RPG Game
                             </div>
@@ -63,9 +64,9 @@
                 <section class="portfolio-wrapper">
                     <a href="#1">
                         <div class="porfolio-entry">
-                            <img src="http://lorempixel.com/250/170/fashion" class="portfolio-image">
+                            <img src="http://lorempixel.com/250/170/city" class="portfolio-image">
                             <div class="portfolio-title">
-                                Rutgers Info Wclassget
+                                Rutgers Info Widget
                             </div>
                         </div>
                     </a>
@@ -76,7 +77,7 @@
                 <section class="portfolio-wrapper">
                     <a href="#1">
                         <div class="porfolio-entry">
-                            <img src="http://lorempixel.com/250/170/fashion" class="portfolio-image">
+                            <img src="http://lorempixel.com/250/170/food" class="portfolio-image">
                             <div class="portfolio-title">
                                 Trivia Game
                             </div>
@@ -91,7 +92,7 @@
                 <section class="portfolio-wrapper">
                     <a href="#1">
                         <div class="porfolio-entry">
-                            <img src="http://lorempixel.com/250/170/fashion" class="portfolio-image">
+                            <img src="http://lorempixel.com/250/170/people" class="portfolio-image">
                             <div class="portfolio-title">
                                 Rock Paper Scissors
                             </div>
@@ -100,11 +101,13 @@
                 </section>
             </div>
         </div>
-        <br><br><br>
-    </div>
-    <footer>
 
-    </footer>
+        <br><br><br>
+
+    </div>
+
+    <footer class="footer">Copyright &copy; </footer>
+
 </body>
 
 </html>
