--- a/portfolio.html
+++ b/portfolio.html
@@ -34,7 +34,7 @@
         <div class="row">
             <div class="col">
                 <section class="portfolio-wrapper">
-                    <a href="#1">
+                    <a href="https://github.com/Jake-David639/Word-Guess-Game">
                         <div class="porfolio-entry">
                             <img src="http://lorempixel.com/250/170/fashion" class="portfolio-image">
                             <div class="portfolio-title">
@@ -47,7 +47,7 @@
             <div class="col">
 
                 <section class="portfolio-wrapper">
-                    <a href="#1">
+                    <a href="https://github.com/Jake-David639/unit-4-game">
                         <div class="porfolio-entry">
                             <img src="http://lorempixel.com/output/technics-q-c-250-170-6.jpg" class="portfolio-image">
                             <div class="portfolio-title">
